fix: resource leak and deprecated API in UpdateChecker
- Use try-with-resources for BufferedReader (auto-close)
- Replace deprecated new URL() with URI().toURL()
- Replace e.printStackTrace() with proper logger.warning()
- Remove unused imports