@@ -2,7 +2,6 @@ package pers.yufiria.craftorithm.util;
 
 import crypticlib.CrypticLibBukkit;
 import crypticlib.listener.EventListener;
-import crypticlib.util.IOHelper;
 import org.bukkit.command.CommandSender;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
@@ -12,10 +11,8 @@ import pers.yufiria.craftorithm.config.Languages;
 import pers.yufiria.craftorithm.config.PluginConfigs;
 
 import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.net.URL;
+import java.net.URI;
 import java.net.URLConnection;
 
 @EventListener
@@ -32,31 +29,23 @@ public class UpdateChecker implements Listener {
         if (!PluginConfigs.CHECK_UPDATE.value())
             return;
         CrypticLibBukkit.scheduler().async(() -> {
-            InputStream is = null;
             try {
-                URL url = new URL("https://api.spigotmc.org/legacy/update.php?resource=108429/");
-                URLConnection conn = url.openConnection();
+                URI uri = new URI("https://api.spigotmc.org/legacy/update.php?resource=108429/");
+                URLConnection conn = uri.toURL().openConnection();
                 conn.setConnectTimeout(15000);
                 conn.setReadTimeout(60000);
-                is = conn.getInputStream();
-                String latestVersion = new BufferedReader(new InputStreamReader(is)).readLine();
-                String pluginVersion = Craftorithm.instance().getDescription().getVersion();
-                pluginVersion = pluginVersion.substring(0, pluginVersion.indexOf("-"));
-                if (checkVersion(latestVersion, pluginVersion)) {
-                    CrypticLibBukkit.scheduler().sync(() -> {
-                        LangUtils.sendLang(sender, Languages.NEW_VERSION, CollectionsUtils.newStringHashMap("<new_version>", latestVersion));
-                    });
-                }
-            } catch (Exception e) {
-                e.printStackTrace();
-            } finally {
-                if (is != null) {
-                    try {
-                        is.close();
-                    } catch (IOException e) {
-                        e.printStackTrace();
+                try (BufferedReader reader = new BufferedReader(new InputStreamReader(conn.getInputStream()))) {
+                    String latestVersion = reader.readLine();
+                    String pluginVersion = Craftorithm.instance().getDescription().getVersion();
+                    pluginVersion = pluginVersion.substring(0, pluginVersion.indexOf("-"));
+                    if (checkVersion(latestVersion, pluginVersion)) {
+                        CrypticLibBukkit.scheduler().sync(() -> {
+                            LangUtils.sendLang(sender, Languages.NEW_VERSION, CollectionsUtils.newStringHashMap("<new_version>", latestVersion));
+                        });
                     }
                 }
+            } catch (Exception e) {
+                Craftorithm.instance().getLogger().warning("Failed to check for updates: " + e.getMessage());
             }
         });
     }
